--- a/.github/workflows/tfvalidate.yml
+++ b/.github/workflows/tfvalidate.yml
@@ -6,7 +6,7 @@ jobs:
   tfvalidate:
     runs-on: ubuntu-latest
     steps:
-    - uses hashicorp/setup-terraform@v2
+    - uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.3.3
         terraform_wrapper: false
